@@ -8,6 +8,7 @@ import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import com.copay.app.dto.MessageResponseDTO;
 import org.springframework.data.util.ReflectionUtils;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -20,7 +21,6 @@ import com.copay.app.dto.group.auxiliary.ExternalMemberDTO;
 import com.copay.app.dto.group.auxiliary.GroupOwnerDTO;
 import com.copay.app.dto.group.response.CreateGroupResponseDTO;
 import com.copay.app.dto.group.response.GetGroupResponseDTO;
-import com.copay.app.dto.group.response.GroupMessageResponseDTO;
 import com.copay.app.entity.Group;
 import com.copay.app.entity.User;
 import com.copay.app.entity.relations.ExternalMember;
@@ -225,7 +225,7 @@ public class GroupServiceImpl implements GroupService {
 
 		// Transform GroupMembers into unique groups and map data for response.
 		List<Group> groups = groupMembers.stream().map(gm -> gm.getId().getGroup()).distinct()
-				.collect(Collectors.toList());
+				.toList();
 
 		// Map groups to response DTO format.
 		List<CreateGroupResponseDTO> createGroupResponseDTO = groups.stream()
@@ -241,7 +241,7 @@ public class GroupServiceImpl implements GroupService {
 
 	@Override
 	@Transactional
-	public GroupMessageResponseDTO deleteGroup(Long groupId, String token) {
+	public MessageResponseDTO deleteGroup(Long groupId, String token) {
 
 		// Find the group by ID or throw exception if not found.
 		Group group = findGroupOrThrow(groupId);
@@ -263,12 +263,12 @@ public class GroupServiceImpl implements GroupService {
 		// Persists deletion in the database.
 		groupRepository.delete(group);
 
-		return new GroupMessageResponseDTO("Group " + group.getName() + " deleted successfully.");
+		return new MessageResponseDTO("Group " + group.getName() + " deleted successfully.");
 	}
 
 	@Override
 	@Transactional
-	public GroupMessageResponseDTO leaveGroup(Long groupId, String token) {
+	public MessageResponseDTO leaveGroup(Long groupId, String token) {
 
 		// Find the group by ID or throw exception if not found.
 		Group group = findGroupOrThrow(groupId);
@@ -286,7 +286,7 @@ public class GroupServiceImpl implements GroupService {
 			// If the user is the owner, delete the group entirely.
 			groupRepository.delete(group);
 
-			return new GroupMessageResponseDTO("You have successfully left the group, and it has been deleted.");
+			return new MessageResponseDTO("You have successfully left the group, and it has been deleted.");
 		}
 
 		// Remove the Registered member from the group.
@@ -296,12 +296,12 @@ public class GroupServiceImpl implements GroupService {
 		groupRepository.save(group);
 
 		// Return success message.
-		return new GroupMessageResponseDTO("You have successfully left the group.");
+		return new MessageResponseDTO("You have successfully left the group.");
 	}
 
 	@Override
 	@Transactional
-	public GroupMessageResponseDTO updateGroup(Long groupId, Map<String, Object> fields) {
+	public MessageResponseDTO updateGroup(Long groupId, Map<String, Object> fields) {
 
 		// Find the group or throw an exception if not found.
 		Group group = findGroupOrThrow(groupId);
@@ -326,7 +326,7 @@ public class GroupServiceImpl implements GroupService {
 		// Save the group with the updated fields.
 		groupRepository.save(group);
 
-		return new GroupMessageResponseDTO("Group updated successfully.");
+		return new MessageResponseDTO("Group updated successfully.");
 	}
 
 	private void updateGroupFields(Group group, Map<String, Object> fields) {
@@ -361,8 +361,8 @@ public class GroupServiceImpl implements GroupService {
 
 	@Override
 	@Transactional
-	public GroupMessageResponseDTO updateGroupRegisteredMembers(Long groupId,
-			UpdateGroupRegisteredMembersRequestDTO request) {
+	public MessageResponseDTO updateGroupRegisteredMembers(Long groupId,
+														   UpdateGroupRegisteredMembersRequestDTO request) {
 
 		// Find the group or throw an exception if not found.
 		Group group = findGroupOrThrow(groupId);
@@ -377,12 +377,12 @@ public class GroupServiceImpl implements GroupService {
 		addNewRegisteredMembers(group, invitedPhoneNumbers);
 
 		// Return success message.
-		return new GroupMessageResponseDTO("Group members updated successfully.");
+		return new MessageResponseDTO("Group members updated successfully.");
 	}
 
 	@Override
 	@Transactional
-	public GroupMessageResponseDTO updateGroupExternalMembers(Long groupId,
+	public MessageResponseDTO updateGroupExternalMembers(Long groupId,
 			UpdateGroupExternalMembersRequestDTO request) {
 
 		// Find the group by ID or throw exception if not found.
@@ -408,7 +408,7 @@ public class GroupServiceImpl implements GroupService {
 		}
 
 		// Return success message.
-		return new GroupMessageResponseDTO("Group external members updated successfully.");
+		return new MessageResponseDTO("Group external members updated successfully.");
 	}
 
 	private void removeUninvitedRegisteredMembers(Group group, Set<String> invitedPhones) {
